--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,11 +1,56 @@
 <view class="">
- <view class="search-view" wx:if="{{true}}" bindtap="go_search">
+  <view class="" wx:if="{{swiper.length>0}}">
+    <swiper indicator-dots="{{indicatorDots}}" circular="{{true}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" indicator-active-color="#ffffff">
+      <block wx:for="{{swiper}}" wx:key="{{item}}">
+        <swiper-item>
+          <navigator url="{{item.page}}">
+            <image src="{{item.cover_url}}" class="slide-image" />
+          </navigator>
+        </swiper-item>
+      </block>
+    </swiper>
+  </view>
+
+  <view class="top-grid-menu">
+    <block wx:for="{{grid}}" wx:key="{{item}}">
+      <navigator class="grid-item" url="{{item.page}}" open-type="{{item.open_type}}">
+        <image class="grid-icon" src="{{item.cover_url}}"></image>
+        <text class="grid-title">{{item.title}}</text>
+      </navigator>
+    </block>
+  </view>
+
+  <view class="search-view" wx:if="{{false}}" bindtap="go_search">
     <text class="search-text">搜索文档</text>
     <icon class="search-icon" type="search" size="15" />
   </view>
-  <view class="list">
+
+  <view class="class-doc" wx:for="{{doc_class_list}}" wx:key="{{item}}">
+    <view class="class-title">{{item.title}}</view>
+    <view class="class-doc-list">
+      <block wx:for="{{item.doc}}" wx:key="{{item}}">
+        <view class="class-doc-list-item"  bindtap="go_info" data-id="{{item.id}}">
+          <view class="class-doc-list-img-box">
+            <image mode="aspectFill" class="class-doc-list-img-box-img" src="{{item.h_cover_url}}"></image>
+            <text class="end-state" wx:if="{{false}}">已完成</text>
+            <view class="view-count">
+              <text class="view-count-text">{{item.view_count}}阅读</text>
+            </view>
+          </view>
+          <view class="class-doc-list-info-box">{{item.title}}</view>
+        </view>
+      </block>
+    </view>
+  </view>
+
+  <view class="bottom-text" wx:if="{{doc_class_list.length>0}}">到底了，去看看课程吧！</view>
+
+  
+
+
+  <!--view class="list">
     <view class="item view-bg" wx:for="{{data.data}}" wx:key="{{item}}" bindtap="go_info" data-id="{{item.id}}">
-      <view class="item-main border-b"  hover-class="view-hover-class">
+      <view class="item-main border-b" hover-class="view-hover-class">
         <view class="item-l">
           <image mode="aspectFill" class="list-image" src="{{item.cover_url}}"></image>
         </view>
@@ -25,14 +70,8 @@
     <view class="no_more" wx:if="{{more}}">{{more_data}}</view>
     <view class="no_more" wx:if="{{no_more}}">{{more_data}}</view>
     <view class="no_data" wx:if="{{no_data}}">
-    <image class="no_data_icon" src="../../assets/images/no_data.png"></image>
-    <view class="no_data_text">暂无推荐文档！</view>
+      <image class="no_data_icon" src="../../assets/images/no_data.png"></image>
+      <view class="no_data_text">暂无推荐文档！</view>
     </view>
-  </view>
-  <view class="kf-btn">
-      <view class="kf-mian">
-        <contact-button type="default-light" size="20" session-from="weapp"></contact-button>
-      </view>
-      <view class="kf-text">求档/建议</view>
-    </view>
+  </view-->
 </view>
