--- a/pages/doc-info/doc-info.wxss
+++ b/pages/doc-info/doc-info.wxss
@@ -1,9 +1,31 @@
-/* doc-info.wxss */
-page{
-  background: #ffffff;
+
+@import '../wenda/wenda.wxss';
+img{
+  background: #f7f7f7;
 }
+.book-detail-x {
+  position: relative;
+  overflow: hidden;
+}
+
+.book-cover-blur {
+  position: absolute;
+  top: -13.2rem;
+  top: calc(50% - 87.5vw);
+  width: 100%;
+  height: 1312rpx;
+  opacity: 0.02;
+  opacity: calc(0.1 + 0.05);
+  -webkit-filter: blur(calc(17px + 1px));
+  filter: blur(calc(17px + 1px));
+}
+
 .info-top {
-  padding: 20rpx 0 0 20rpx;
+  position: relative;
+  padding: 32rpx 32rpx 0 32rpx;
+  background: #fff;
+  background: -webkit-linear-gradient(bottom, #fff, rgba(255, 255, 255, 0) 108px) no-repeat center bottom;
+  background: linear-gradient(to top, #fff, rgba(255, 255, 255, 0) 8rem) no-repeat center bottom;
 }
 
 .top-main {
@@ -17,58 +39,134 @@ page{
   flex-shrink: 0;
   margin-right: 20rpx;
 }
-.main-r{
+
+.main-r {
   display: flex;
   flex-direction: column;
 }
-.info-title{
-    font-size: 40rpx;
-    height: 120rpx;
-    margin-bottom: 20rpx;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    font-weight: bold;
-    color: #33373d;
+
+.info-title {
+  font-size: 40rpx;
+  height: 80rpx;
+  margin-bottom: 20rpx;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  font-weight: bold;
+  color: #33373d;
+  display: block;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
 }
-.info-username{
+
+.info-username {
   font-size: 24rpx;
   line-height: 1.8;
 }
-.info-class{
+
+.info-class {
   font-size: 24rpx;
   line-height: 1.8;
 }
-.info-from{
+
+.info-from {
   font-size: 24rpx;
   line-height: 1.8;
 }
-.top-btn-group{
+
+.top-btn-group {
   padding: 40rpx 0 30rpx 0;
+  display: flex;
+  justify-content: space-between;
 }
-.btn{
-  margin-right: 20rpx;
-  width: 222rpx;
+
+.top-btn-group .btn {
+  margin: 0;
+  width: 220rpx;
+  border-radius: 0;
+  line-height: 2.6;
 }
-.top-info-desc{
-  font-size: 28rpx;
+
+.top-btn-group .btn::after {
+  border-radius: 0;
+}
+
+.desc-main .border-b {
+  margin-left: 32rpx;
+}
+
+.top-info-desc {
+  font-size: 24rpx;
   line-height: 1.6;
-  padding: 30rpx 20rpx 30rpx 0;
-  color: #666666;
+  padding: 32rpx;
+  color: #666;
+  background: #fff;
 }
-.top-menu{
+
+.top-menu {
   display: flex;
   justify-content: space-between;
   line-height: 90rpx;
 }
-.menu-name{
-  color: #666666;
+
+.menu-name {
+  color: #666;
   font-size: 36rpx;
   font-weight: bold;
-  
 }
-.menu-info{
+
+.menu-info {
   font-size: 24rpx;
-  color: #999999;
+  color: #999;
   margin-right: 20rpx;
 }
+
+.zan-main {
+  background: #fff;
+  margin-top: 10rpx;
+}
+
+.zan-main .border-b {
+  margin-left: 32rpx;
+}
+
+.zan-top {
+  display: flex;
+  padding:20rpx 32rpx;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.zan-body {
+  display: flex;
+}
+.zan-empty{
+  text-align: center;
+  line-height: 90rpx;
+  color: #999999;
+}
+.no_data{
+  background: #ffffff;
+}
+.no_data_text {
+  background: none;
+  color: #999999;
+}
+.zan-user-list{
+  display: flex;
+  margin:0 22rpx;
+}
+
+.zan-user-list .user-info {
+  width: 80rpx;
+  height: 80rpx;
+  padding: 20rpx 10rpx;
+}
+
+.zan-user-list .user-info .user-avatar {
+  width: 80rpx;
+  height: 80rpx;
+  border-radius: 50%;
+}
+
