--- a/pages/wenda/wenda.wxml
+++ b/pages/wenda/wenda.wxml
@@ -1,6 +1,62 @@
-<view class="">
-  <view class="no_data" wx:if="{{true}}">
+<block wx:if="{{show_page}}">
+  <block wx:for="{{data.data}}" wx:key="{{item}}">
+    <navigator url="../wenda-page/wenda-page?id={{item.id}}" class="q-item">
+      <view class="q-left">
+        <view class="q-status">
+          <view class="answer-num">{{item.reply_count}}</view>
+          <view>回答</view>
+        </view>
+      </view>
+      <view class="q-right">
+        <view class="q-info">
+          <view class="q-man">
+            <image src="{{item.user.avatar}}" class="q-avatar"></image>
+            <view class="q-asker">
+            <text class="name">{{item.user.name}}</text>
+            <text class="title">{{item.user.title}}</text>
+            </view>
+          </view>
+          <view class="q-time">{{item.created}}</view>
+        </view>
+        <view class="q-title" bindtap="goDetail">{{item.title}}</view>
+        <view class="q-tags" wx:if="{{false}}">
+          <view class="q-tag">linux</view>
+          <view class="q-tag">javascript</view>
+          <view class="q-tag">nginx</view>
+        </view>
+        <view class="pic-grid" wx:if="{{item.pics_arr.length>0}}">
+          <block wx:if="{{item.pics_type==3}}">
+            <image src="{{item.thumb}}" wx:for="{{item.pics_arr}}" wx:key="{{item}}" class="pic3"></image>
+          </block>
+          <block wx:if="{{item.pics_type==2}}">
+            <image src="{{item.thumb}}" wx:for="{{item.pics_arr}}" wx:key="{{item}}" class="pic2"></image>
+          </block>
+          <block wx:if="{{item.pics_type==1}}">
+            <image mode="widthFix" src="{{item.thumb}}" wx:for="{{item.pics_arr}}" wx:key="{{item}}" class="pic1"></image>
+          </block>
+        </view>
+        <view class="from-line">
+          <view class="from-left"><block wx:if="{{item.source_info.title}}">来自：<text class="">{{item.source_info.title}}</text></block></view>
+          <view class="from-right">
+            <view class="from-right-item" wx:if="{{false}}">
+              <view class="iconfont icon-huida"></view>
+              <text>523</text>
+            </view>
+            <view class="from-right-item" wx:if="{{false}}">
+              <view class="iconfont icon-shoucang"></view>
+              <text>523</text>
+            </view>
+          </view>
+        </view>
+      </view>
+    </navigator>
+    <view class="border-b"></view>
+  </block>
+  <view class="no_more" wx:if="{{more}}">{{more_data}}</view>
+  <view class="no_more" wx:if="{{no_more}}">{{more_data}}</view>
+  <view class="no_data" wx:if="{{no_data}}">
     <image class="no_data_icon" src="../../assets/images/no_data.png"></image>
-    <view class="no_data_text">抱歉，暂未问答数据！</view>
+    <view class="no_data_text">暂无数据！</view>
   </view>
-</view>
+  <navigator wx:if="{{false}}" url="../wenda-post/wenda-post?source=base&source_id=0" class="iconfont ask-btn" bindtap="goAsk">提问</navigator>
+</block>
