--- a/pages/doc-page/doc-page.wxss
+++ b/pages/doc-page/doc-page.wxss
@@ -1,7 +1,6 @@
 /**基础风格样式**/
 @import '/towxml/style/main.wxss';
 
-
 /**如果页面有动态主题切换，则需要将使用到的样式全部引入**/
 
 /**主题配色（浅色样式）**/
@@ -9,17 +8,23 @@
 
 /**主题配色（深色样式）**/
 @import '/towxml/style/theme/dark.wxss';
-.page-main{
+
+
+@import '../doc-menu/doc-menu.wxss';
+
+.page-main {
   margin: 0;
-  padding: 0;
+  padding: 0 0 100rpx 0;
 }
-.code{
-    background: #333;
-    border: 1px solid #333;
-    padding: 2px 5px;
-    color: #fff;
+
+.code {
+  background: #333;
+  border: 1px solid #333;
+  padding: 2px 5px;
+  color: #fff;
 }
-.set-read-type{
+
+.set-read-type {
   position: fixed;
   z-index: 99;
   bottom: 20rpx;
@@ -30,13 +35,91 @@
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.5);
 }
-.set-read-type-icon{
+
+.set-read-type-icon {
   width: 40rpx;
   height: 40rpx;
 }
+
 .iconfont.ask-btn {
   width: 80rpx;
   height: 80rpx;
   background: rgba(255, 255, 255, 0.5);
-  color: #999999;
+  color: #999;
+}
+
+.footer-bar {
+  background: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100rpx;
+  display: flex;
+}
+
+.bar-item {
+  height: 100rpx;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  flex-grow: 1;
+  align-items: center;
+  justify-content: center;
+}
+
+.bar-item text {
+  color: #fff;
+  font-size: 22rpx;
+}
+
+.bar-item .c-iconfont {
+  font-size: 40rpx;
+  margin-bottom: 8rpx;
+}
+
+.set-font {
+  position: fixed;
+  bottom: 100rpx;
+  width: 100%;
+  height: 100rpx;
+  padding: 25rpx 0;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.set-f-l {
+  width: 100rpx;
+  text-align: center;
+}
+
+.set-f-body {
+  flex-shrink: 0;
+  flex-grow: 1;
+}
+
+.set-f-r {
+  width: 100rpx;
+  text-align: center;
+}
+
+.set-f-l .c-iconfont, .set-f-r .c-iconfont {
+  color: #fff;
+  font-size: 32rpx;
+}
+
+.page-menu{
+  position: fixed;
+  width: 562rpx;
+  background: #ffffff;
+  top: 0;
+  bottom: 0rpx;
+  right: 0;
+  box-shadow: -100rpx 0 160rpx rgba(0, 0, 0, 0.5); 
+}
+
+.select{
+  background: #dddddd;
 }
