--- a/pages/wenda-page/wenda-page.wxml
+++ b/pages/wenda-page/wenda-page.wxml
@@ -31,13 +31,13 @@
         <text class="d-describe">{{wenda.desc}}</text>
         <view class="pic-grid" wx:if="{{wenda.pics_arr.length>0}}">
           <block wx:if="{{wenda.pics_type==3}}">
-            <image src="{{item.thumb}}" data-src="{{item.path}}" catchtap="show_image" wx:for="{{wenda.pics_arr}}" wx:key="{{item}}" class="pic3"></image>
+            <image mode="aspectFill" src="{{item.thumb}}" data-src="{{item.path}}" catchtap="show_image" wx:for="{{wenda.pics_arr}}" wx:key="{{item}}" class="pic3"></image>
           </block>
           <block wx:if="{{wenda.pics_type==2}}">
-            <image src="{{item.thumb}}" data-src="{{item.path}}" catchtap="show_image" wx:for="{{wenda.pics_arr}}" wx:key="{{item}}" class="pic2"></image>
+            <image mode="aspectFill" src="{{item.thumb}}" data-src="{{item.path}}" catchtap="show_image" wx:for="{{wenda.pics_arr}}" wx:key="{{item}}" class="pic2"></image>
           </block>
           <block wx:if="{{wenda.pics_type==1}}">
-            <image mode="widthFix" data-src="{{item.path}}" catchtap="show_image" src="{{item.thumb}}" wx:for="{{wenda.pics_arr}}" wx:key="{{item}}" class="pic1"></image>
+            <image mode="aspectFill" mode="widthFix" data-src="{{item.path}}" catchtap="show_image" src="{{item.thumb}}" wx:for="{{wenda.pics_arr}}" wx:key="{{item}}" class="pic1"></image>
           </block>
         </view>
       </view>
